<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KEYSPOTS</string>
    <string name="button_finder">Find a KEYSPOT</string>
    <string name="button_events">Find classes</string>
    <string name="button_resources">Find more resources</string>
    <string name="button_joml">Join our mailing list</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="hello_world">Test!</string>
    <string name="title_activity_search_for_keyspot"> KEYSPOT FINDER</string>
    <string name="title_activity_find_resources"> RESOURCES</string>
    <string name="title_activity_join_our_mailing_list"> JOIN OUR MAILING LIST</string>
    <string name="title_activity_find_events"> EVENTS</string>
    <string name="title_activity_events">EVENTS</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="title_activity_keyspots">Keyspots Activity</string>
    <string name="title_activity_single_event_item">SingleEventItemActivity</string>
    <string name="title_activity_joml">JOMLActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <!-- Events filter -->
    <string name="byZIP_header"><b>By ZIP</b></string>
    <string name="byDate_header"><b>By Date</b></string>
    <string name="byLevel_header"><b>By Level</b></string>
    <string name="byTopics_header"><b>By Topics</b></string>
    <string name="byOtherInfo_header"><b>By Other Info</b></string>
    <string name="ZIP_caption">Enter a zip code to search for trainings in your area</string>
    <string name="Date_caption">Please select a date to filter the results</string>
    <string name="Level_caption">Find events according to skill levels</string>
    <string name="Topics_caption">Find events according to available topics</string>
    <string name="ZIPtext">Enter a ZIP Code</string>
    <string name="b_search">Search</string>
    <string name="pick_date">Calendar : Pick a Date</string>
    <string name="checkbx_all_levels">All Levels </string>
    <string name="all_levels_caption"><i>Select all levels to choose all available levels</i></string>
    <string name="checkbx_first_time">First-Time</string>
    <string name="first_time_caption"><i>I have not used a mouse and keyboard</i></string>
    <string name="checkbx_beginner">Beginner</string>
    <string name="beginner_caption"><i>I can use a mouse and a keyboard</i></string>
    <string name="checkbx_intermediate">Intermediate</string>
    <string name="intermediate_caption"><i>I am comfortable using the Internet</i></string>
    <string name="checkbx_advanced">Advanced</string>
    <string name="advanced_caption"><i>Skilled with the Internet\Software</i></string>
    <string name="checkbx_tech_expert">Tech Expert</string>
    <string name="tech_expert_caption"><i>Highly Developed Skills</i></string>
    <string name="events_loading">Loading events, workshops, courses, training opportunities and much more offered at community locations throughout Philadelphia</string>
    <string name="advanced_search"><b>Advanced Search</b></string>
    <string name="advanced_search_caption">Select checkboxes below to find training classes that meet your interests.</string>
    <string name="checkbx_web_access">Web Access</string>
    <string name="checkbx_computer_basics">Computer Basics</string>
    <string name="checkbx_internet_basics">Internet Basics</string>
    <string name="checkbx_ms_office">MS Office</string>
    <string name="checkbx_social_media">Social Media</string>
    <string name="checkbx_job_search">Job Search/Readiness</string>
    <string name="event_title"><b>Event Title:</b></string>
    <string name="event_date"><b>Event Date and Time:</b></string>
    <string name="event_keyspot"><b>Keyspot:</b></string>
    <string name="event_mpartner"><b>Managing Partner</b></string>

    <!-- JOML -->
    <string name="joml_caption">Enter your information to join our mailing list</string>
    <string name="joml">Will have form that sends users information into the joml webform to Drupal</string>
    <string name="email">Email</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="zipcode">ZIP code</string>
    <string name="phone">Phone #</string>
    <string name="phone_caption"><i>Format example: 215-555-1212 ext.123</i></string>
    <string name="joml1">I want to receive an email newsletter to learn more about upcoming trainings and events</string>
    <string name="joml2">I want information about upcoming computer training programs only</string>
    <string name="joml3">I want information about upcoming events only</string>
    <string name="submit">Submit</string>
    <!-- Keyspot -->
    <string name="byZIP_caption">Enter a ZIP Code to find a keyspot in your area</string>
    <string name="title_activity_dashboard_fragment">DashboardFragment</string>
    <string name="keyspot_info_button">Info</string>
    <string name="keyspot_map_button">Map</string>
    <string name="keyspot_get_directions_button">Get Directions</string>
    <string name="use_location">Use My Location</string>
    <!-- HTTP Requests -->
    <string name="connection_error">Connection Error: The app cannot download content, because the network connection is unavailable</string>
    <string name="xml_error">XML Error: An xml error has occurred, check http request</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="page_title_events">Search Results</string>
    <string name="page_title_keyspots">KEYSPOTS List</string>
    <string name="updated">Last Updated </string>
    <string name="wifi_connected">Wi-Fi Connected</string>
    <string name="lost_connection">Lost Connection</string>
<<<<<<< HEAD
    <string name="title_activity_single_event_item">SingleEventItemActivity</string>
    <string name="title_activity_joml">JOMLActivity</string>
    <!--  Resources -->
    <string name="resources_career_button">Career</string>
    <string name="resources_computer_training_button">Computer Training</string>
    <string name="resources_public_services_button">Public Services</string>

=======
   
    <!-- About Us -->
    <string name="whatis">What is the Freedom Rings Partnership?</string>
    <string name="whatis_text">In the digital age, a computer and Internet access is a necessity, yet 41% of Philadelphians do no have access. Formed to tackle this problem, the Freedom Rings Parnership is comprised of grassroots organizations,government, and universities bringing Internet access, training and technology to communities citywide.</string>
    <string name="whois">Who is it for?</string>
    <string name="whois_text">You! Free computer use, Internet access and training are offered to anyone and everyone!</string>
    <string name="whencan">When can I start?</string>
    <string name="whencan_text">Anytime! Freedom Rings Partnership powered KEYSPOTS and Training Programs started popping up around town in the Summer of 2011.</string>
    <string name="wherecan">Where can I find a location?</string>
    <string name="wherecan_text">Trainings are offered at more than 70 Freedom Rings Partnership powered KEYSPOTS, primarily in North, South and West Philadelphia neighbourhoods. Use the KEYSPOT Finder to locate training near you.</string>
    <string name="howcan">How can I find out more?</string>
    <string name="howcan_text">Call 311 or the Freedom Rings Partnership Hotline at 215&#8211;851&#8211;1990. Make sure to join our mailing list to receive emails about upcoming events and offerings.</string>
    <string name="visitus"> Visit us : www.phillykeyspots.org/about-us</string>
    <!-- Partners -->
    <string name="partners">Our Partners</string>
    <string name="parksnrec">City of Philadelphia Department of Parks and Recreation</string>
    <string name="parksnrec_text">1515 Arch Street, Floor 10, Philadelphia, PA 19102 \nPhone : 2156832109, \nEmail: Benjamin.Burenstein@phila.gov</string>
    <string name="oit">City of Philadelphia, Office of Innovation &amp; Technology</string>
    <string name="oit_text">1234 Market Street, Suite 1850, Philadelphia, PA 19107 \nPhone: 2156838101, \nEmail: Lindsey.keck@phila.gov</string>
    <string name="ccp">Community College of Philadelphia</string>
    <string name="ccp_text">1700 Spring Garden Street, Philadelphia, PA 19130 \nPhone: 2154966158, \nEmail: csinquiry@ccp.edu</string>
    <string name="drexel">Drexel University</string>
    <string name="drexel_text">3141 Chestnut Street, Philadelphia, PA 19104 \nPhone: 2156067848, \nEmail: btopawareness@coe.drexel.edu</string>
    <string name="flp">Free Library of Philadelphia</string>
    <string name="flp_text">1901 Vine Street, Philadelphia, PA 19103, \nPhone: 2156865372, \nEmail: hotspots@freelibrary.org</string>
    <string name="mmp">Media Mobilizing Project</string>
    <string name="mmp_text">4233 Chestnut Street, Philadelphia, PA 19143, \nPhone: 2158219632, \nEmail: info@mediamobilizingproject.org</string>
    <string name="odat">One Day At A Time</string>
    <string name="odat_text">2532 North Broad Street, Philadelphia, PA 19132, \nPhone: 2152667860, \nEmail: LouisS@odaat.us</string>
    <string name="pec">People\'s Emergency Center</string>
    <string name="pec_text">325 N.39th Street, Philadelphia, PA 19104, \nPhone: 2153827522, \nEmail: btop@pec-cares.org</string>
    <string name="fight">Philadelphia FIGHT\'s Critical Path Project</string>
    <string name="fight_text">1233 Locust Street, 3rd Floor, Philadelphia, PA 19107, \nPhone: 2159854448, \nEmail: critpath@critpath.org</string>
    <string name="pha">Philadelphia Housing Authority</string>
    <string name="pha_text">12 South 23rd Street, Philadelphia, PA 19103, \nPhone: 2156844000, \nEmail: info@pha.phila.gov</string>
    <string name="oic">Philadelphia OIC</string>
    <string name="oic_text">1231 N.Broad Street, Philadelphia, PA 19122, \nPhone: 2152367700, \nEmail: esmith@philaoic.org</string>
    <string name="rutgers">Rutgers University School of Communication and Information</string>
    <string name="rutgers_text">4 Huntington Street, New Brunswick, NJ 08901, \nPhone: 7329327500, \nEmail: sfash@rutgers.edu</string>
    <string name="uac">Urban Affairs Coalition</string>
    <string name="uac_text">1207 Chestnut Street, Philadelphia, PA 19107, \nPhone: 2158511990, \nEmail: REnnis@UAC.org</string>
    <string name="wilco">Wilco Electronic Systems Inc.</string>
    <string name="wilco_text">1035 Camp Hill Road, Fort Washington, PA 19034, \nPhone: 2155403930, \nEmail: info@wilcoinc.com</string>
    <string name="yoacap">Youth Outreach Adolescent Community Awareness Program (YOACAP)</string>
    <string name="yoacap_text">1207 Chestnut Street, 3rd Floor, Philadelphia, PA 19107, \nPhone: 2158511968, \nEmail: woody@yoacap.org</string>
    
	<!-- Contact Us -->
	<string name="contactus">Call us today</string>
	<string name="phillykeyspots">Phillykeyspots : 2158511990</string>
	<string name="philly311">Philly311 : Dial 311</string>
>>>>>>> Added ContactUs and AboutUs page
</resources>