<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsActivity" >

   	<LinearLayout android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical">
   	    <!-- Contact Us header -->
	    <TextView android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/contactus"
	        android:textStyle="bold" 
	        android:background="@color/orange1595C"
	        android:textColor="#FFFFFF"
	        android:paddingTop="8dp"
	        android:paddingBottom="8dp"
	        android:paddingLeft="16dp"/>
	    <!-- Call us ... -->
		<TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/phillykeyspots"
	        android:textSize="16sp"
	        android:textColor="@color/blue659C"
	        android:autoLink="phone"
	        android:textStyle="bold"
	        android:paddingTop="8dp"
	        android:paddingLeft="16dp"/>
		<TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/philly311"
	        android:textSize="16sp"
	        android:textColor="@color/blue659C"
	        android:autoLink="phone"
	        android:textStyle="bold"
	        android:paddingTop="8dp"
	        android:paddingLeft="16dp"
	        android:paddingBottom="8dp"/>
   	    <!-- Partners header -->
	    <TextView android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/partners"
	        android:textStyle="bold" 
	        android:background="@color/orange1595C"
	        android:textColor="#FFFFFF"
	        android:paddingTop="8dp"
	        android:paddingBottom="8dp"
	        android:paddingLeft="16dp"/>
	    <!-- Parks and Rec -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/parksnrec"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingTop="8dp"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/parksnrec_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- OIT -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oit"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oit_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- CCP -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ccp"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ccp_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Drexel -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/drexel"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/drexel_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Free Lib. -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/flp"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/flp_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Media Mob. Project -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mmp"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mmp_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- One day at a time -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/odat"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/odat_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- People's Emer. Center -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pec"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pec_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- FIGHT -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fight"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fight_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- PHA -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pha"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pha_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- OIC -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oic"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/oic_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Rutgers -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rutgers"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rutgers_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- UAC -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/uac"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/uac_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Wilco -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wilco"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wilco_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"/>
	    <!-- Yoacap -->
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/yoacap"
	        android:textSize="16sp"
	        android:textColor="@color/orange1595C"
	        android:textStyle="bold"
	        android:paddingLeft="16dp"/>
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/yoacap_text"
	        android:textSize="16sp"
	        android:autoLink="all"
	        android:paddingLeft="16dp"
	        android:paddingBottom="8dp"/>
   	</LinearLayout>

</ScrollView>