<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" >
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joml_caption"
        android:textSize="13sp"/>
    <EditText android:id="@+id/joml_eaddress" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="13sp"/>
    <EditText android:id="@+id/joml_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fname"
        android:textSize="13sp"/>
    <EditText android:id="@+id/joml_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lname"
        android:textSize="13sp"/>
    <EditText android:id="@+id/joml_zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zipcode"
        android:textSize="13sp"/>
    <EditText android:id="@+id/joml_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="13sp"
        android:inputType="phone"/>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_caption"
        android:textSize="11sp"
        android:paddingLeft="5dp"/>
    <RadioGroup android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">
	    <RadioButton android:id="@+id/joml1" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/joml1"
	        android:textSize="13sp"
	        android:onClick="onJomlRadioClicked"/>
	    <RadioButton android:id="@+id/joml2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/joml2"
	        android:textSize="13sp"
	        android:onClick="onJomlRadioClicked"/>
	    <RadioButton android:id="@+id/joml3" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/joml3"
	        android:textSize="13sp"
	        android:onClick="onJomlRadioClicked"/>
    </RadioGroup>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:background="@drawable/orange_rounded_button"
        android:onClick="checkJomlData"/>
</LinearLayout>