<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:context=".AboutUsActivity"
	    android:orientation="vertical">
	    
		<Button android:id="@+id/b_about1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/whatis"
		    android:textStyle="bold"
		    android:textColor="#FFFFFF"
		    android:background="@drawable/b_aboutus_bg"
		    android:onClick="changePanelsAboutus"/>
	    <TextView android:id="@+id/about1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/whatis_text"
	        android:textSize="18sp"
	        android:padding="16dp"
	        android:visibility="visible"
	        android:textColor="@color/blue659C"/>
	        
		<Button android:id="@+id/b_about2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/whois"
		    android:textStyle="bold"
		    android:textColor="#FFFFFF"
		    android:background="@drawable/b_aboutus_bg"
		    android:onClick="changePanelsAboutus"/>
	    <TextView android:id="@+id/about2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/whois_text"
	        android:textSize="18sp"
	        android:padding="16dp"
	        android:visibility="gone"
	        android:textColor="@color/blue659C"/>
	    
	    <Button android:id="@+id/b_about3"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/whencan"
		    android:textStyle="bold"
		    android:textColor="#FFFFFF"
		    android:background="@drawable/b_aboutus_bg"
		    android:onClick="changePanelsAboutus"/>
	    <TextView android:id="@+id/about3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/whencan_text"
	        android:textSize="18sp"
	        android:padding="16dp"
	        android:visibility="gone"
	        android:textColor="@color/blue659C"/>
	    
	    <Button android:id="@+id/b_about4"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/wherecan"
		    android:textStyle="bold"
		    android:textColor="#FFFFFF"
		    android:background="@drawable/b_aboutus_bg"
		    android:onClick="changePanelsAboutus"/>
	    <TextView android:id="@+id/about4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/wherecan_text"
	        android:textSize="18sp"
	        android:padding="16dp"
	        android:visibility="gone"
	        android:textColor="@color/blue659C"/>
	    
	    <Button android:id="@+id/b_about5"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/howcan"
		    android:textStyle="bold"
		    android:textColor="#FFFFFF"
		    android:background="@drawable/b_aboutus_bg"
		    android:onClick="changePanelsAboutus"/>
	    <TextView android:id="@+id/about5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/howcan_text"
	        android:textSize="18sp"
	        android:padding="16dp"
	        android:visibility="gone"
	        android:textColor="@color/blue659C"/>
	    <!-- Visit us -->
	    <TextView android:id="@+id/visitus"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/visitus"
	        android:textSize="18sp"
	        android:autoLink="web"
	        android:paddingTop="8dp"
	        android:paddingLeft="16dp"
	        android:paddingBottom="8dp"/>
	</LinearLayout>
</ScrollView>