<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" >
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/byZIP_caption"
        android:textSize="12sp"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <EditText android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/ZIPtext"
	        android:textSize="12sp"/>
	    <Button android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/b_search"
	            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>