<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <!-- First Row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--KEYSPOTFinder button.-->
        <Button 
            android:id="@+id/b_finder"
        	android:layout_width="0dp"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:text="@string/button_finder"
        	android:onClick="dashboard"/>
        
   		<!--Training events button -->
   		<Button 
   		    android:id="@+id/b_events"
        	android:layout_width="0dp"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:text="@string/button_events"
        	android:onClick="dashboard"/>
   	</LinearLayout>

    <!-- Second Row -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
   		
        <!--Resources button-->
    	<Button
    	    android:id="@+id/b_resources"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:text="@string/button_resources"
	        android:onClick="dashboard" />

    	<!--Join our mailing list button-->
    	<Button 
    	    android:id="@+id/b_joml"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:text="@string/button_joml"
	        android:onClick="dashboard"/>
    </LinearLayout>

</LinearLayout>