<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/resources_career"
            android:text="@string/resources_career_button"
            android:textColor="@color/orange1645C"
            android:onClick="resourcesButton"/>
        <Button 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/resources_computer_training"
            android:text="@string/resources_computer_training_button"
            android:onClick="resourcesButton"/>
        <Button 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/resources_public_services"
            android:text="@string/resources_public_services_button"
            android:onClick="resourcesButton"/>
    </LinearLayout>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/resources_webview" />

</LinearLayout>